# SWARM_UAVs_GazeboSimulation_PX4_SITL_ImageProcessing

./: .gitignore  README.md  launch_swarm.sh  regression_logger.py  start_multidomain.sh
docs/images/: README.md
simulation/gz/models/kirmizi_alan/: model.config  model.sdf
simulation/gz/models/mavi_alan/: model.config  model.sdf
simulation/gz/models/qr_11/: model.config  model.sdf
simulation/gz/models/qr_22/: model.config  model.sdf
simulation/gz/models/qr_33/: model.config  model.sdf
simulation/gz/models/qr_44/: model.config  model.sdf
simulation/gz/models/qr_55/: model.config  model.sdf
simulation/gz/models/qr_66/: model.config  model.sdf
simulation/gz/models/x500/: model.sdf
simulation/gz/worlds/: default.sdf
src/laplacian_interfaces/: CMakeLists.txt  package.xml  record_baseline.sh
src/laplacian_interfaces/msg/: AgentState.msg  ColorDetection.msg  CommandResult.msg  ControlCommand.msg  ControlSetpoint.msg  LocalizationState.msg  MissionCommand.msg  Px4Status.msg  QrDetection.msg  ZoneAck.msg  ZoneObservation.msg
src/laplacian_swarm/: package.xml  setup.cfg  setup.py
src/laplacian_swarm/config/: field.yaml  profile_real.yaml  profile_semi.yaml  profile_sitl.yaml  vehicles.yaml
src/laplacian_swarm/laplacian_swarm/: field.py  formations.py  geo.py  localization_node.py  mission_trigger.py  px4_gateway_node.py  qr_parse.py  swarm_agent_node.py  vision_node.py
src/laplacian_swarm/launch/: swarm_bringup.launch.py
src/laplacian_swarm/scripts/: start_sitl_swarm.sh  start_sitl_swarm_multidomain.sh
tools/zenoh/: bridge_allowlist.json5
