<?xml version="1.0"?>
<package format="3">
  <name>laplacian_interfaces</name>
  <version>0.1.0</version>
  <description>Decentralized swarm broadcast + telemetry messages</description>
  <maintainer email="dev@laplacian.local">laplacian</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
